--- a/.gitignore
+++ b/.gitignore
@@ -1,51 +1,40 @@
-# Dependências do Node.js
+# Ignorar a pasta node_modules
 node_modules/
-package-lock.json
 
-# Build output
-build/
+# Ignorar arquivos de build ou pasta de distribuição (caso você faça builds)
 dist/
+build/
 
-# Logs
-logs/
+# Ignorar arquivos de ambiente (caso estejam no projeto)
+.env
+.env.local
+.env.development
+.env.production
+.env.test
+
+# Ignorar logs
 *.log
+logs/
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
-# Dependências do Firebase e configurações locais
-firebase-debug.log
-./firebase
+# Ignorar configurações do editor de código (como Visual Studio Code)
+.vscode/
+.idea/
+*.sublime-workspace
+*.sublime-project
 
-# Sistema operacional e IDEs
+# Ignorar arquivos de teste de cobertura
+coverage/
+
+# Ignorar arquivos gerados automaticamente
 .DS_Store
 Thumbs.db
 
-# Arquivos de configuração do sistema
-.env
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
-
-# Arquivos de cache e configuração
-.cache/
-.parcel-cache/
-.vscode/
-
-# Test output
-coverage/
-*.lcov
-
-# Configurações e diretórios do serviço de análise de desempenho
-reportWebVitals.js
-
-# Arquivos gerados pelo servidor
-server.js
-
-# Arquivos JSON de configuração local
+# Ignorar o codes.json na raiz do projeto
 codes.json
+src/firebase/firebase.js
 
-# Outros arquivos que não devem ser versionados
-*.swp
-*.tmp
+# Ignorar arquivos de cache
+.cache/
